# SmartStroller

./: .cproject  .gitignore  .project  CMakeLists.txt  org.tizen.position-finder-server.manifest  project_def.prop  tizen-manifest.xml  tizen-manifest.xml.in
.sign/: .manifest.tmp  author-signature.xml  signature1.xml
inc/: connectivity.h  connectivity_internal.h  controller.h  controller_internal.h  controller_util.h  log.h  model.h  model_internal.h  peripheral_io.h  resource.h  resource_internal.h  webutil.h
inc/model/: model_illuminance_sensor.h  model_infrared_motion_sensor.h  model_infrared_obstacle_avoidance_sensor.h  model_touch_sensor.h  model_ultrasonic_sensor.h
inc/resource/: resource_camera.h  resource_flame_sensor.h  resource_gas_detection_sensor.h  resource_gyro_sensor.h  resource_illuminance_sensor.h  resource_illuminance_sensor_internal.h  resource_infrared_motion_sensor.h  resource_infrared_motion_sensor_internal.h  resource_infrared_obstacle_avoidance_sensor.h  resource_infrared_obstacle_avoidance_sensor_internal.h  resource_motor_driver_L298N.h  resource_motor_driver_L298N_internal.h  resource_pressure_sensor.h  resource_pressure_sensor_internal.h  resource_rain_sensor.h  resource_sound_detection_sensor.h  resource_tilt_sensor.h  resource_touch_sensor.h  resource_touch_sensor_internal.h  resource_ultrasonic_sensor.h  resource_ultrasonic_sensor_internal.h  resource_vibration_sensor.h
packaging/: org.tizen.position-finder-server.spec
res/: pi.conf
script/: sd_fusing_rpi3.sh
src/: connection_manager.c  connectivity.c  controller.c  controller_internal.c  controller_util.c  main.c  model.c  resource.c  webutil.c
src/model/: model_illuminance_sensor.c  model_infrared_motion_sensor.c  model_infrared_obstacle_avoidance_sensor.c  model_touch_sensor.c  model_ultrasonic_sensor.c
src/resource/: resource_PCA9685.c  resource_adc_mcp3008.c  resource_camera.c  resource_flame_sensor.c  resource_gas_detection_sensor.c  resource_gyro_sensor.c  resource_illuminance_sensor.c  resource_infrared_motion_sensor.c  resource_infrared_obstacle_avoidance_sensor.c  resource_led.c  resource_pressure_sensor.c  (+7 more)
